--- a/frontend/home/style.css
+++ b/frontend/home/style.css
@@ -4,9 +4,21 @@
     box-sizing: border-box;
 }
 
-h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 2rem;
+body {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    background: #f5f5f5;
+}
+
+header {
+    max-width: 1600px;
+    margin: 0 auto;
+    background-color: #fff;
+}
+
+main {
+    max-width: 1600px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 20px;
 }
